2002-03-05  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-bonobo-extensions.c:
	(nautilus_bonobo_set_accelerator): Remove unneeded
	g_return_if_fail. We call only one other function, so that can
	handle parameter checking.
	(nautilus_bonobo_set_label): Ditto.
	(nautilus_bonobo_set_tip): Ditto.
	(nautilus_bonobo_set_sensitive): Ditto.
	(nautilus_bonobo_set_toggle_state): Ditto.
	(nautilus_bonobo_set_hidden): Ditto.
	(nautilus_bonobo_get_label): Ditto.
	(nautilus_bonobo_get_hidden): Add g_return_if_fail.
	(get_numbered_menu_item_name): Remove unused parameters.
	(add_numbered_menu_item_internal): Set label with
	nautilus_bonobo_set_label so there aren't any issues with XML
	entity encoding.
	(nautilus_bonobo_add_submenu): Ditto.
	(nautilus_bonobo_add_menu_separator): Add g_return_if_fail.
	(remove_commands): Remove g_return_if_fail since caller does it.
	(nautilus_bonobo_set_label_for_menu_item_and_command): Add
	g_return_if_fail.

2002-03-06  Anders Carlsson  <andersca@gnu.org>

	* libnautilus-private/nautilus-directory-async.c:
	(should_look_for_dot_directory_file), (lacks_link_info):
	Only look for .directory files in directories that have a
	special scheme.

	(make_dot_directory_uri):
	Remove sync check for .directory files.
	
2002-03-05  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-list-view.c:
	(tree_selection_foreach_set_boolean): New.
	(tree_selection_not_empty): New.
	(tree_view_has_selection): New.
	(event_after_callback): Handle only clicks in the bin_window.
	Also, decide which menu to display by whether an item is selected
	or not rather than by where the click is.
	(button_press_callback): Deselect all items when you click on the
	background.
	(create_and_set_up_tree_view): Connect the new handler.

2002-03-05  Dave Camp  <dave@ximian.com>
       
	* components/notes/nautilus-notes.c:
	(notify_listeners_if_changed): Remove the #ifdef
	GNOME2_CONVERSION_COMPLETE and replace
	bonobo_property_bag_notify_listeners with a