@@ -146,19 +146,22 @@
 
 	<submenu name="Edit">
 		<menuitem name="Cut"
-			  _label="Cu_t Files" 
+			  _label="Cu_t Files"
 			  accel="*Control*x"
+			  pixtype="stock" pixname="gtk-cut"
 			  verb="Cut Files"/>
 		<menuitem name="Copy"
-			  _label="_Copy Files" 
+			  _label="_Copy Files"
 			  accel="*Control*c"
+			  pixtype="stock" pixname="gtk-copy"
 			  verb="Copy Files"/>
 		<menuitem name="Paste"
-			  _label="_Paste Files" 
+			  _label="_Paste Files"
 			  accel="*Control*v"
+			  pixtype="stock" pixname="gtk-paste"
 			  verb="Paste Files"/>
 		<menuitem name="Select All"
-			  _label="Select _All Files" 
+			  _label="Select _All Files"
 			  accel="*Control*a"
 			  verb="Select All"/>
 		
