@@ -1,3 +1,8 @@
+2002-03-04  David Emory Watson  <dwatson@cs.ucr.edu>
+	
+	* src/file-manager/nautilus-directory-view-ui.xml: fix mini icons in
+	the edit menu so that they don't disappear when the focus changes.
+
 2002-03-05  Darin Adler  <darin@bentspoon.com>
 
 	* libnautilus-private/nautilus-bonobo-extensions.c:
